lab8/retries/virtual-service.yaml
#retry any request that resulted in any 500 error code, up to 3 times

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dateapi-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - route:
    - destination:
        host: dateapi
        port:
          number: 8080
    retries:
      attempts: 3
      perTryTimeout: "2s"
      retryOn: "5xx"      
    timeout: "10s"      
    
    
# The timeout was set to work around a bug in Istio that sets perTryTimeout to 0 if the timeout is not set:
